# SpikeLMo

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: error.rs  fpga_export.rs  fusion.rs  lib.rs  main.rs  training.rs
src/tensor/: mod.rs  ops.rs
src/transformer/: attention.rs  block.rs  mod.rs  model.rs
